tests/snapshots/run_wpt_conformance__coreml_gather_float32_2D_tensor_and_int32_0D_negative_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float32 2D tensor and int32 0D negative indices default options",
    "coreml",
    "PASS",
)
